# 2024_umiusi

./: .clang-format  .gitignore  .gitmodules  .ruff.toml  LICENSE  README.md
.github/workflows/: build.yml
app/: README.md
app/image_proc_msg/: CMakeLists.txt  README.md  package.xml
app/image_proc_msg/msg/: ColoredRectangle.msg  DetectionResult.msg  Rectangle.msg
app/imshow/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
app/imshow/imshow/: imshow.py
app/imshow/include/imshow/: imshow.hpp
app/imshow/launch/: imshow_launch.py
app/imshow/src/: imshow.cpp  main.cpp
app/power_map/: CMakeLists.txt  README.md  package.xml
app/power_map/config/: default_param.yml
app/power_map/include/power_map/: container.hpp  placement.hpp  power_map.hpp
app/power_map/launch/: launch.py  power_map_launch.py
app/power_map/src/: placement.cpp  power_map.cpp
app/power_map_msg/: CMakeLists.txt  README.md  package.xml
app/power_map_msg/msg/: NormalizedPower.msg
app/simple_joy_app/: CMakeLists.txt  README.md  package.xml
app/simple_joy_app/include/simple_joy_app/: app.hpp  status.hpp
app/simple_joy_app/launch/: app_launch.py
app/simple_joy_app/src/: app.cpp
app/trapezoidal_acc/: CMakeLists.txt  package.xml
app/trapezoidal_acc/include/trapezoidal_acc/: trapezoid.hpp
app/trapezoidal_acc/src/: trapezoid.cpp  trapezoid_main.cpp
device/: README.md
device/camera_reader/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
device/camera_reader/camera_reader/: camera.py
device/camera_reader/config/: default_param.yml
device/camera_reader/include/camera_reader/: camera_reader.hpp
device/camera_reader/launch/: camera_reader_launch.py
device/camera_reader/src/: camera_reader.cpp  main.cpp
device/joystick/: README.md  package.xml  setup.py
device/joystick/joystick/: joystick.py
device/joystick/launch/: joystick_launch.py
device/nucleo_communicate/: CMakeLists.txt  README.md  package.xml
device/nucleo_communicate/include/nucleo_communicate/: channel.hpp  nucleo_state.hpp  recv_data.hpp  send_data.hpp  serial_port.hpp
device/nucleo_communicate/launch/: channel_launch.py
device/nucleo_communicate/src/: channel.cpp  recv_data.cpp  send_data.cpp  serial_port.cpp
device/nucleo_communicate_py/: README.md  package.xml  setup.cfg  setup.py
device/nucleo_communicate_py/launch/: channel_launch.py  main_launch.py  receiver_launch.py  sender_launch.py
device/nucleo_communicate_py/nucleo_communicate_py/: channel.py  main.py  mutex_serial.py  receiver.py  sender.py
device/pi_i2c/: README.md  package.xml  setup.cfg  setup.py
device/pi_i2c/launch/: all_launch.py  depth_launch.py  imu_launch.py
device/pi_i2c/pi_i2c/: all.py  depth.py  imu.py  utils.py
device/pi_led/: README.md  package.xml  setup.cfg  setup.py
device/pi_led/config/: default_param.yml  left_param.yml
device/pi_led/launch/: led_launch.py
device/pi_led/pi_led/: pi_led.py
infra/: README.md
packet/: README.md
packet/order/power/packet_power/: CMakeLists.txt  package.xml
packet/order/power/packet_power/include/packet_power/: powerspacket.hpp
packet/order/power/packet_power/src/: power.cpp  power_main.cpp
packet/order/quit/packet_quit/: CMakeLists.txt  package.xml
packet/order/quit/packet_quit/include/packet_quit/: quitspacket.hpp
packet/order/quit/packet_quit/src/: quit.cpp  quit_main.cpp
packet/packet_composed/: CMakeLists.txt  package.xml
packet/packet_composed/include/packet_composed/: sensorspacket.hpp
packet/packet_composed/sensors/current/packet_current/: CMakeLists.txt  package.xml
packet/packet_composed/sensors/current/packet_current/include/packet_current/: currentspacket.hpp
packet/packet_composed/sensors/current/packet_current/src/: current.cpp  current_main.cpp
packet/packet_composed/sensors/depth/packet_depth/: CMakeLists.txt  package.xml
packet/packet_composed/sensors/depth/packet_depth/include/packet_depth/: depthspacket.hpp
packet/packet_composed/sensors/depth/packet_depth/src/: depth.cpp  depth_main.cpp
packet/packet_composed/sensors/flex/flex1/packet_flex1/: CMakeLists.txt  package.xml
packet/packet_composed/sensors/flex/flex1/packet_flex1/include/packet_flex1/: flex1spacket.hpp
packet/packet_composed/sensors/flex/flex1/packet_flex1/src/: flex1.cpp  flex1_main.cpp
packet/packet_composed/sensors/flex/flex2/packet_flex2/: CMakeLists.txt  package.xml
packet/packet_composed/sensors/flex/flex2/packet_flex2/include/packet_flex2/: flex2spacket.hpp
packet/packet_composed/sensors/flex/flex2/packet_flex2/src/: flex2.cpp  flex2_main.cpp
packet/packet_composed/sensors/voltage/packet_voltage/: CMakeLists.txt  package.xml
packet/packet_composed/sensors/voltage/packet_voltage/include/packet_voltage/: voltagepacket.hpp
packet/packet_composed/sensors/voltage/packet_voltage/src/: voltage.cpp  voltage_main.cpp
packet/packet_composed/src/: composed.cpp  composed_main.cpp
packet/packet_interfaces/: CMakeLists.txt  README.md  package.xml
packet/packet_interfaces/msg/: Composed.msg  Current.msg  Depth.msg  Flex.msg  LedColor.msg  NucleoState.msg  Power.msg  Voltage.msg
payloads/: README.md
ul/: README.md  package.xml  setup.py
ul/launch/: double_camera.py  double_imshow.py  double_led.py  nucleo_channel.py  order_nucleo.py  pi_devices.py  simple_joy_app_pc.py
