<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imshow</name>
  <version>0.0.0</version>
  <description>ROS 2 package for receiving images</description>
  <maintainer email="yoshikawa.h.ah@m.titech.ac.jp">hiro</maintainer>
  <license>MIT License</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
