<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick</name>
  <version>0.1.0</version>
  <description>ゲームコントローラー</description>
  <maintainer email="hronok66@gmail.com">h1rono</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-pygame</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
