<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nucleo_communicate_py</name>
  <version>0.1.0</version>
  <description>Nucleoとの通信周り</description>
  <maintainer email="hronok66@gmail.com">h1rono</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>packet_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
