<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pi_led</name>
  <version>0.0.0</version>
  <description>LEDを光らせる</description>
  <maintainer email="sahonorth@gmail.com">23-saho</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>packet_interfaces</exec_depend>
  <exec_depend>python3-gpiozero</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
